--- a/import.ini
+++ b/import.ini
@@ -15,6 +15,7 @@ random=1
 
 [foo]
 commit_each_file=10000
+#input_file_pattern=foo*.json
 #randomize_unique_key=id
 #randomize_unique_key_mode=append
 
