--- a/import.ini
+++ b/import.ini
@@ -5,6 +5,7 @@ solr_url=http://localhost:8983/solr/
 max_files=0
 input_dir=../export
 commit_each_file=0
+commit_each_pause=1
 commit_final=1
 optimize_final=0
 
@@ -12,6 +13,7 @@ loop_max_count=0
 loop_time_duration=30
 loop_time_request_duration=15
 random=1
+verbose=1
 
 [foo]
 commit_each_file=10000
