--- a/query-gosport.ini
+++ b/query-gosport.ini
@@ -1,6 +1,6 @@
 [general]
 timezone=Europe/Paris
-solr_url=http://46.105.55.253:9999/solr/
+solr_url=http://localhost:8983/solr/
 
 loop_max_count=0
 loop_time_duration=30
@@ -12,7 +12,7 @@ verbose=1
 loop_time_request_duration=0
 random=0
 loop_max_count=1
-log_dir=//projects/Projects/Decade/gosport/
-log_pattern=s.log
-output_csv=//projects/Projects/Decade/gosport/output.csv
+log_dir=/projects/Projects/Decade/gosport/
+log_pattern=s20.log
+output_csv=/projects/Projects/Decade/gosport/output.csv
 
