Skip slow queries

--- a/import-gosport.ini
+++ b/import-gosport.ini
@@ -14,11 +14,17 @@ loop_time_request_duration=15
 random=1
 
 [french]
-input_dir=/projects/Projects/Decade/gosport/corpus2
+input_dir=/projects/Projects/Decade/gosport/corpus
 input_file_pattern=*.json
 commit_each_file=100
 loop_max_count=0
+
 random=0
 commit_each_pause=0
 loop_time_request_duration=0
 loop_time_duration=0
+
+#random=1
+#commit_each_pause=0
+#loop_time_request_duration=60
+#loop_time_duration=300
