--- a/query-gosport.ini
+++ b/query-gosport.ini
@@ -7,6 +7,7 @@ loop_time_duration=30
 loop_time_request_duration=15
 random=1
 verbose=1
+skip_slow_queries=0
 
 [french]
 loop_time_request_duration=0
