--- a/export-infopro.ini
+++ b/export-infopro.ini
@@ -1,23 +1,109 @@
 [general]
 solr_url=http://localhost:8983/solr/
-start=0
+start=*
 rows=10
-json_max_size=100
-json_max_byte_size=50000
-fl=*
+json_max_size=1000
+json_max_byte_size=10000000
+fl=
 q=*:*
 fq=
-max_rows=0
+max_rows=100000
 fl_force_ignore=
 fl_force_empty=
-output_dir=/projects/Projects/Decade/gosport/corpus4
-verbose=1
+output_dir=/tmp/export
+verbose=0
+extra_q=
+extra_params='defType=lucene'
 
-[french]
-fl_force_ignore=textSpell
-unique_key=unique_id
+
+[prod]
+fl_force_ignore=referenceStr,facet_categorie_hierarchie,titleSpell,texteSpell
+;fl=auteurs,citations_jp,content_html,content_no_html,defendeurs,demandeurs,desc,editoTopDocumentPosition,facet_typedocument,formation,id,imageLegende,imageTitleDocument,imageTitre,indexationTree,indice,juridiction,nor,num_ud,numArt,numero,numReqAff,numReqAffN,numTexte,parties,publication_date,reference,referenceAllCases,resume,rubrique,sct,siege,sous_rubrique,structure_html,structure_no_html,title,title_cite_par,titreComplet,uid,availableOn,typeDocument,sousTypeDocument,etatLegi,dateFinArt,type_var,isSearchableList,type
+fl=content_no_html,facet_typedocument,publication_date,reference,referenceAllCases,title,uid,availableOn,typeDocument,sousTypeDocument,isSearchableList
+unique_key=uid
 start=*
-fq="gender_facet:(fille)"
+;q=établissement soins Hôpital
+q='title:(Radiateur corps chauffe chauffage radiateur accumulation Hôpital établissement soins nf* Béton ciment Arrêté code environnement) OR  content_no_html:(Radiateur corps chauffe chauffage radiateur accumulation Hôpital établissement soins nf* Béton ciment Arrêté code environnement)'
+;q=Radiateur corps chauffe chauffage radiateur accumulation Hôpital établissement soins nf* Béton ciment Arrêté code environnement
+;extra_params='df=content_no_html&q.op=OR'
+;extra_params='df=title&q.op=OR'
+extra_params='q.op=OR'
+fq=availableOn:KHEOXBT
+
+
+[Edito]
+fl_force_ignore=text_srch,title_srch,title_exact,text_exact,spell
+unique_key=uid
+q='*:*'
+
+
+[EmploiMasterOffre]
+fl=id_offre,external_id,reference_client,reference_dixit,id_ref_statut_offre,ref_statut_offre,id_ref_site,ref_site,id_ref_source,ref_source,id_ref_support_offre,ref_support_offre,id_ref_statut_commercial_offre,ref_statut_commercial_offre,id_organisme,organisme,id_organisme_alias,organisme_alias,is_anonyme,is_handicap,top_position,is_tnt,a_la_une,nb_visite,nb_redirection,nb_clic_info_comp,id_ref_niveau_exp,ref_niveau_exp,id_ref_salaire,ref_salaire,label,description_employeur,description_poste,description_profil,lieu_travail,ville,code_postal,id_ref_localisation_region,ref_localisation_region_label,id_ref_localisation_depart,ref_localisation_depart_label,id_ref_pays,ref_pays_label,id_ref_mode_candidature,ref_mode_candidature,email,url_redirection,info_complementaire,generated_path,date_publication,date_expiration,date_actualisation,date_creation,date_modification,priorite,organisme_media,organisme_alias_media,organisme_ref_type_structure,organisme_alias_ref_type_structure,ref_type_contrat,ref_niveau_public,ref_domaine_metier_generique,ref_type_employeur,ref_domaine_metier_specifique,ref_filiere_cadre_emploi,ref_fonction,ref_secteur,ref_destination,ref_destination_newsletter,ref_localisation,ordre_external_id,ref_credit,ref_option,dateIndexationMoteur,id_bo_user,organisme_id_ref_type_structure,organisme_alias_id_ref_type_structure,id_ref_type_contrat,id_ref_niveau_public,id_ref_domaine_metier_generique,id_ref_type_employeur,id_ref_domaine_metier_specifique,id_ref_filiere_cadre_emploi,id_ref_fonction,id_ref_secteur,id_ref_destination,id_ref_destination_newsletter,id_ref_localisation,id_ref_zone_geographique,id_ordre,id_ref_credit,id_ref_option,default_search
+unique_key=id_offre
+q='*:*'
+
+
+[ExpoFull]
+fl_force_ignore=
+fl=uid,type,lang,visible,visible_fr,visible_en,visible_de,stand_id,stand_ref_etat_id,stand_ref_site_principal_id,stand_stand_reseau_id,stand_stand_reseau_label,stand_payant,stand_ref_site_secondaire_id,stand_ref_plateforme_id,stand_id_str,stand_label,stand_short_label,stand_label_exact,stand_description,stand_description_fr,stand_description_en,stand_description_de,stand_description_activite,stand_description_activite_fr,stand_description_activite_en,stand_description_activite_de,stand_slogan,stand_slogan_fr,stand_slogan_en,stand_slogan_de,stand_generated_path,stand_generated_path_fr,stand_generated_path_en,stand_generated_path_de,stand_website,stand_top_fournisseur,stand_grand_compte,stand_offre_decouverte,stand_no_leads,stand_no_dispatch_no_call,stand_no_leadgen,stand_leads_inclus,stand_leads_exclusifs,stand_lead_definition,stand_critere_geographique,stand_critere_geographique_pays,stand_critere_geographique_departement,stand_critere_geographique_code_postal,stand_ref_naf_to_exclude,stand_code_naf_to_exclude,stand_specificite_activite,stand_aide_selection,stand_gold,stand_position_listes,stand_vente_directe,stand_special_marchand,stand_espace_marque,stand_scoring,stand_all_leads_livres,stand_priorisation,stand_user_bo_id,stand_user_bo_production_id,stand_category_path_id,stand_category_path,stand_category_path_fr,stand_category_path_en,stand_category_path_de,media_stand_id,media_stand_extension,media_stand_width,media_stand_height,product_id,product_ref_etat_id,product_label,product_label_fr,product_label_en,product_label_de,product_description,product_description_fr,product_description_en,product_description_de,product_description_print,product_description_print_fr,product_description_print_en,product_description_print_de,product_description_revue,product_description_revue_fr,product_description_revue_en,product_description_revue_de,product_vendor_comment,product_vendor_comment_fr,product_vendor_comment_en,product_vendor_comment_de,product_external_url,product_external_url_fr,product_external_url_en,product_external_url_de,product_video_url,product_video_url_fr,product_video_url_en,product_video_url_de,product_reference,product_reference_fr,product_reference_en,product_reference_de,product_reference_exact,product_reference_exact_fr,product_reference_exact_en,product_reference_exact_de,product_caracteristic,product_caracteristic_fr,product_caracteristic_en,product_caracteristic_de,product_keyword,product_keyword_fr,product_keyword_en,product_keyword_de,product_scope,product_scope_fr,product_scope_en,product_scope_de,product_sav,product_sav_fr,product_sav_en,product_sav_de,product_warranty,product_warranty_fr,product_warranty_en,product_warranty_de,product_pays_origine_id,product_date_creation,product_date_commercialisation,product_date_modification,product_date_first_publication,product_pays_origine,product_pays_origine_fr,product_pays_origine_en,product_pays_origine_de,product_distribution_mode_id,product_distribution_mode_label,product_distribution_mode,product_distribution_mode_fr,product_distribution_mode_en,product_distribution_mode_de,product_generated_path,product_generated_path_fr,product_generated_path_en,product_generated_path_de,product_flag_id,product_flag,product_flag_fr,product_flag_en,product_flag_de,product_ref_gamme_id,product_price_comment,product_price_comment_fr,product_price_comment_en,product_price_comment_de,product_marque_id,product_marque_label,product_marque_label_fr,product_marque_label_en,product_marque_label_de,media_product_id,media_product_extension,media_crop_product_id,media_product_width,media_product_height,user_bo_modification_id,user_bo_modification_name,contact_modification_id,contact_modification_name,user_bo_creation_id,user_bo_creation_name,contact_creation_id,contact_creation_name,category_path_id,category_path,category_path_fr,category_path_en,category_path_de,category_root_id,category_root,category_root_fr,category_root_en,category_root_de,category_encrypted,category_encrypted_fr,category_encrypted_en,category_encrypted_de,category_path_id_master,category_path_master,category_path_master_fr,category_path_master_en,category_path_master_de,product_category_appel_offres,product_category_avis_attribution,product_category_bourse_equipement,product_category_id,product_category_label,product_category_label_fr,product_category_label_en,product_category_label_de,stand_video_url,stand_video_url_fr,stand_video_url_en,stand_video_url_de,spell_fr,spell_en,spell_de,autosuggest_fr_product,autosuggest_fr_stand,autosuggest_fr_categorie,autosuggest_fr_reference,autosuggest_fr_marque,autosuggest_en_product,autosuggest_en_stand,autosuggest_en_categorie,autosuggest_en_reference,autosuggest_en_marque,autosuggest_de_product,autosuggest_de_stand,autosuggest_de_categorie,autosuggest_de_reference,autosuggest_de_marque,parution,dateIndexationMoteur,product_label_exact,product_label_exact_fr,product_label_exact_en,product_label_exact_de,category_path_exact,category_path_exact_fr,category_path_exact_en,category_path_exact_de,autosuggest_fr_ngram_product,autosuggest_fr_edge_product,autosuggest_fr_ngram_stand,autosuggest_fr_edge_stand,autosuggest_fr_suggest_concat_token_stand,autosuggest_fr_ngram_categorie,autosuggest_fr_edge_categorie,autosuggest_fr_ngram_reference,autosuggest_fr_edge_reference,autosuggest_fr_ngram_marque,autosuggest_fr_edge_marque,autosuggest_en_ngram_product,autosuggest_en_edge_product,autosuggest_en_ngram_stand,autosuggest_en_edge_stand,autosuggest_en_suggest_concat_token_stand,autosuggest_en_ngram_categorie,autosuggest_en_edge_categorie,autosuggest_en_ngram_reference,autosuggest_en_edge_reference,autosuggest_en_ngram_marque,autosuggest_en_edge_marque,autosuggest_de_ngram_product,autosuggest_de_edge_product,autosuggest_de_ngram_stand,autosuggest_de_edge_stand,autosuggest_de_suggest_concat_token_stand,autosuggest_de_ngram_categorie,autosuggest_de_edge_categorie,autosuggest_de_ngram_reference,autosuggest_de_edge_reference,autosuggest_de_ngram_marque,autosuggest_de_edge_marque,autosuggest_en,autosuggest_de
+unique_key=uid
+q='*:*'
+
+
+[MOL]
+fl_force_ignore=recherche_mots_cles,full_search_phrase,full_search_word,texte_highlighting
+unique_key=id
+q='*:*'
+
+
+[OpenDataEdito]
+unique_key=uid
+q='*:*'
+
+
+[OpenDataGazette]
+unique_key=uid
+q='*:*'
+
+
+[MOLProfils]
+unique_key=id
+q='*:*'
+
+
+[MOLSociete]
+fl_force_ignore=autosuggest_fr_ngram_name_lc,autosuggest_fr_edge_name_lc
+unique_key=uid
+q='*:*'
+
+
+[IEEvents]
+fl=id,type,evt_investissement_id,evt_social_id,titre,date,investissement_montant,emploi,creations_emplois,suppressions_emplois,calendrier,status_id,status_label,part_terrain,part_batiment,part_equipement,part_autre,part_autre_label,invest_type,invest_nature,etablissement_id,raison_sociale,abreviation,description,code_postal,ville,latitude,longitude,visible,fermeture,type_site,ref_status_id,ref_nature_etablissement_id,region,departement,ref_pays_id,effectif_annuel,effectif_annuel_cadres,tag_edito,ca,article,date_tri,spell,production,article_titre,article_chapo,article_content,titre_srch,titre_exact,raison_sociale_srch,raison_sociale_exact,description_srch,description_exact,ville_srch,ville_exact,appartenance_srch,appartenance_exact,abreviation_srch,abreviation_exact,text,article_titre_srch,article_titre_exact,article_chapo_srch,article_chapo_exact,article_content_srch,article_content_exact
+unique_key=id
+q='*:*'
+
+
+[CarrierePublique]
+fl=id,type,id_produit,id_ref_statut,titre,tarif,code_reference,id_ref_filiere,id_ref_type_concours,id_ref_fonction_publique,id_ref_cadre_emploi,id_ref_region,id_ref_departement,id_ref_categorie_concours,id_ref_metier,label_ref_filiere,label_ref_type_concours,label_ref_fonction_publique,label_ref_cadre_emploi,label_ref_region,label_ref_departement,label_ref_categorie_concours,label_ref_metier,generated_path,date_creation,date_modification,id_produit_ouvrage,id_ref_ouvrage_editeur,id_ref_ouvrage_collection,label_ref_ouvrage_editeur,label_ref_ouvrage_collection,type_ouvrage,id_media,type_formation,surtitre,id_produit_complementaire,type_produit_complentaire,id_produit_preparation_concours,id_ref_condition_acces,id_date_concours,etat,date_validite,date_retrait_dossier,date_depot_dossier,date_epreuves,libelle_date_epreuves,titre_produit,generated_path_produit,tarif_min_produit,dateIndexationMoteur,default_search
+unique_key=id
+q='*:*'
+
+
+[Commback]
+fl_force_ignore=
+fl=uid,id,typeDocument,sousTypeDocument,dateIndexationMoteur,id_contact,contact_nom,contact_prenom,contact_email,contact_id_societe_contact,contact_id_ref_statut,contact_id_societe_contact_ref_statut,contact_has_email,contact_email_desabonnement,contact_tel_desabonnement,contact_tel,contact_mobile,contact_url,contact_date_modification,contact_civilite,contact_fonction_exacte,contact_fonction_label,contact_fonction_id,contact_fonction_full,contact_service_label,contact_service_label_sort,contact_service_id,contact_service_full,societe_id,id_societe,id_societe_detail,id_user_modification,id_user_creation,date_creation,date_modification,date_tech_modification,raison_sociale,raison_sociale_search,siret,siren,tva_intra,adresse1,adresse2,adresse3,tel,fax,site_web,ca,annee_ca,sigle,enseigne,insee,siret_siege,code_naf,code_duns,code_postal,ville,commentaire,optout,origine,id_ref_statut,visible,nb_effectif_site,nb_effectif_national,rg_alexa_pays,rg_alexa_monde,rg_similar_pays,rg_similar_monde,rg_similar_categorie,decisionnaire,type_etablissement,nb_etablissement,delocaliser,interconnecter,nb_site_interconnecte,longitude,latitude,url_linkedin,url_comex,cac_40,cac_at,sbf_120,alternex,truffle,bourse,indice_completude,users_creation_nom,users_modification_nom,naf_libelle,secteur,id_secteur,id_ref_region,id_ref_departement,code_naf1,code_naf2,code_naf3,code_naf4,code_naf5,description,ssii,contactable_email,contactable_tel,id_media,nb_serveur,nb_imprimante,nb_virtualisation,nb_poste,nb_tablette,nb_laptop,nb_tel,nb_fax,nb_mobile,nb_serveur_calcul,nb_imprimante_calcul,nb_virtualisation_calcul,nb_poste_calcul,nb_tablette_calcul,nb_laptop_calcul,nb_tel_calcul,nb_fax_calcul,nb_mobile_calcul,nb_serveur_saisie,nb_imprimante_saisie,nb_virtualisation_saisie,nb_poste_saisie,nb_tablette_saisie,nb_laptop_saisie,nb_tel_saisie,nb_fax_saisie,nb_mobile_saisie,nb_contact,siret_tete_groupe,tete_groupe,departement,region,tags,equipement_materiel,id_equipement_materiel,equipement_materiel_marque,equipement_materiel_modele,equipement_materiel_os,equipement_materiel_resolution,equipement_materiel_quantite,equipement_materiel_date_acquisition,equipement_materiel_id_ref_mode_acquisition,equipement_materiel_categorie,equipement_materiel_full,equipement_logiciel,editeur,id_equipement_logiciel,equipement_logiciel_categorie,equipement_logiciel_full,service,fournisseur,nature,id_service,service_categorie,service_full,equipement_digital,equipement_digital_categorie,equipement_digital_fournisseur,equipement_digital_nom,id_equipement_digital,equipement_full,suggestType,suggestText,raison_sociale_sort,fonction_label_list,service_label_list
+unique_key=uid
+q='*:*'
+
+
+[IndustrieExplorer]
+unique_key=uid
+q='*:*'
+
+
+[Moniteur]
+unique_key=uid
+q='*:*'
 
 
 
