--- a/import-gosport.ini
+++ b/import-gosport.ini
@@ -13,6 +13,7 @@ loop_time_duration=30
 loop_time_request_duration=15
 random=1
 
+
 [french]
 input_dir=/projects/Projects/Decade/gosport/corpus
 input_file_pattern=*.json
@@ -28,3 +29,18 @@ loop_time_duration=0
 #commit_each_pause=0
 #loop_time_request_duration=60
 #loop_time_duration=300
+
+
+[gosport]
+max_files=0
+
+input_dir=/projects/Projects/Decade/gosport/pertinence/corpus
+input_file_pattern=*.json
+commit_each_file=100
+loop_max_count=0
+
+random=0
+commit_each_pause=0
+loop_time_request_duration=0
+loop_time_duration=0
+
